# code-agent-rust

./: .gitignore  Cargo.toml  README.md  logs.txt
src/: lib.rs  main.rs
src/action/: mod.rs  permissions.rs  subagent.rs
src/core/: compaction.rs  indexer.rs  main_loop.rs  mod.rs
src/intelligence/: indexer.rs
src/orchestrator/: autonomous.rs  budget.rs  config.rs  controller.rs  diagnostic.rs  dispatch.rs  engine.rs  graph.rs  mod.rs  models.rs  patch.rs  prompt.rs  strategy.rs  transaction.rs  ui.rs
src/state/: session.rs
src/terminal/: shell.rs
src/tools/: bash.rs  bootstrap.rs  browser.rs  calculator.rs  code_chain.rs  date_n_time.rs  diagonistic.rs  edit.rs  edit_file.rs  execute_command.rs  glob.rs  grep.rs  location.rs  market.rs  mod.rs  read_file.rs  registry.rs  search.rs  search_grep.rs  shell.rs  task.rs  utils.rs  weather.rs  write_file.rs
src/tools/business/: business_model_analyzer.rs  competition_analyzer.rs  distribution_analyzer.rs  founder_analyzer.rs  market_demand_validator.rs  mod.rs  startup_idea_generator.rs  strategic_assumption.rs  technical_moat_editor.rs  venture_score_card.rs
src/ui/: dashboard.rs
src/verification/: gate.rs
tests/: chain.rs
