[package]
name = "code-agent-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4.6", features = ["derive"] }
regex = "1.12"
walkdir = "2.5"
async-trait = "0.1"
glob = "0.3"
chrono = "0.4"
indicatif = "0.18.4"
mdka = "2.1.5"
meval = "0.2.0"
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3.5"
